public/css/mainStyle.css
#navbar-icon {
  display: inline-flex;
  vertical-align: middle;
}

.custom-badge {
  width: auto;
  border-radius: 2px;
  color: white;
  float: left;
  padding: 0px 5px;
  font-weight: 300;
  margin-right: 5px;
}

.inline-spinner-wrapper {
  display: inline-block;
}

.inline-spinner {
  width: 1em;
  height: 1em;
  margin-right: 0.3em;
}

.btn-spacing {
  margin-left: 2rem;
}

.btn-spacing-right {
  margin-right: 2rem;
}

.no-bottom-mrg {
  margin-bottom: 0;
}

.underline {
  text-decoration: underline;
}

html, button, input, optgroup, select, textarea {
  font-family: Roboto, BlinkMacSystemFont, "Segoe UI", Oxygen-Sans, Ubuntu, Cantarell, "Helvetica Neue", sans-serif !important;
}

.mdi:before, .mdi-set, .material-icons.close {
  font-family: "Material Design Icons";
  font-weight: normal;
  font-style: normal;
  font-size: 24px;
  display: inline-block;
  text-rendering: auto;
  text-transform: none;
  letter-spacing: normal;
  word-wrap: normal;
  white-space: nowrap;
  direction: ltr;
  line-height: inherit;

  /* Support for all WebKit browsers. */
  -webkit-font-smoothing: antialiased;

  /* Support for Safari and Chrome. */
  text-rendering: optimizeLegibility;

  /* Support for Firefox. */
  -moz-osx-font-smoothing: grayscale;

  /* Support for IE. */
  font-feature-settings: "liga";
}

/*adjustment to make it work with this different type of icon set*/
.material-icons.close:before {
  content: "\F156";
  display: inline-block;
  position: absolute;
  font-size: 18px;
}
.material-icons.close {
  width: 22px;
  margin-left: -5px;
}

i.tiny:before {
  font-size: 1rem;
}
i.small:before {
  font-size: 2rem;
}
i.mediumsmall:before {
  font-size: 3rem;
}
i.medium:before {
  font-size: 4rem;
}
i.header-large:before {
  font-size: 5.4rem;
  line-height: 1;
}
i.large:before {
  font-size: 6rem;
}

i.tiny, i.small, i.medium, i.large {
  font-size: inherit;
}

.pagination li i:before {
  font-size: 2rem;
}

.btn i:before, .btn-large i:before, .btn-small i:before,
.btn-floating i:before,
.btn-large i:before,
.btn-small i:before,
.btn-flat i:before {
  font-size: 1.3rem;
  line-height: inherit;
}

.btn-small i:before {
  font-size: 1.2rem
}

.btn-floating i:before {
  font-size: 1.6rem;
}

.btn-large i:before {
  font-size: 1.6rem;
}

.btn-floating.btn-large i:before {
  font-size: 2.8rem;
}

.btn-floating.btn-large i {
  line-height: 54px;
}

table.striped > thead {
  border-bottom: 1px solid #d0d0d0;
}

table.striped > tbody > tr:nth-child(odd) {
  background-color: #f2f2f2;
}

.input-field .prefix {
  top: 0;
}

.subtitle-mrg {
  margin-top: -1rem;
}

.row:not(.lv-header-row) {
  margin-left: -0.75rem !important;
  margin-right: -0.75rem !important;
}

.row-pad-extra {
  margin-left: inherit;
  margin-right: inherit;
}

.collapsible-header {
  line-height: 1.5em;
}

input, textarea {
  color: inherit;
}

@media print {
  nav, footer {
    display: none;
  }

  i.header-large:before {
    font-size: 4rem;
  }

  body {
    line-height: 1.3em;
  }

  .divider {
    display: none;
  }

  h1, h2, h3, h4, h5, h6 {
    line-height: 1;
  }

  h1, h2, h3 {
    font-size: 2.5rem;
  }

  .light {
    font-weight: normal;
  }

  .btn, .btn-large, .btn-small {
    color: black;
  }

  table.striped tbody tr {
    border-bottom: solid 1px lightgrey;
  }

  td {
    padding: 5px 3px;
  }

  .toc-top {
    line-height: 1em !important;
  }

  ul.collapsible .collapsible-body {
    display: block;
  }
}

